[gd_scene load_steps=13 format=3 uid="uid://bbhdrrjvh4jrw"]

[ext_resource type="Script" path="res://object_scenes/entity/enemy_scenes/penguin/penguin.gd" id="1_1yoqu"]
[ext_resource type="Texture2D" uid="uid://kqc7ljn2iai7" path="res://object_scenes/entity/enemy_scenes/penguin/sprite.png" id="2_x05ct"]
[ext_resource type="PackedScene" uid="uid://meikam2oyy13" path="res://object_scenes/entity/components/health_component.tscn" id="3_7bje5"]
[ext_resource type="PackedScene" uid="uid://c05kukkqfrg40" path="res://object_scenes/entity/components/hitbox.tscn" id="3_enauh"]
[ext_resource type="PackedScene" uid="uid://8jw6pruiu3cf" path="res://object_scenes/entity/components/hurtbox.tscn" id="4_0rgty"]
[ext_resource type="PackedScene" uid="uid://84sah16y8gwq" path="res://object_scenes/entity/components/delete_me_outside_of_chunk.tscn" id="4_tpm0b"]
[ext_resource type="Texture2D" uid="uid://mwjxc6goor4m" path="res://items/blocks/natural/dirt.png" id="5_udoxk"]
[ext_resource type="AudioStream" uid="uid://c8bcs8s6yao8k" path="res://sound/enemy/penguinDig.ogg" id="8_pxhdn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i6j3q"]
size = Vector2(6, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mco5x"]
size = Vector2(6, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fol0l"]
size = Vector2(6, 6)

[sub_resource type="Curve" id="Curve_sld51"]
max_value = 0.25
_data = [Vector2(0.5, 0.25), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Penguin" type="CharacterBody2D" node_paths=PackedStringArray("healthComp")]
collision_layer = 128
script = ExtResource("1_1yoqu")
creatureSlots = 10
healthComp = NodePath("HealthComponent")

[node name="axis" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="axis"]
texture = ExtResource("2_x05ct")
offset = Vector2(0, -3)
hframes = 4

[node name="wallRay" type="RayCast2D" parent="axis"]
target_position = Vector2(6, 0)

[node name="floorRay" type="RayCast2D" parent="axis"]
target_position = Vector2(0, 4)

[node name="diggingdetect" type="RayCast2D" parent="axis"]
position = Vector2(0, 1)
target_position = Vector2(0, -2)
hit_from_inside = true

[node name="Hitbox" parent="axis" node_paths=PackedStringArray("healthComponent", "colliderShape") instance=ExtResource("3_enauh")]
position = Vector2(-7, 1)
healthComponent = NodePath("../../HealthComponent")
colliderShape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="axis/Hitbox"]
position = Vector2(7, -3.5)
shape = SubResource("RectangleShape2D_i6j3q")

[node name="Hurtbox" parent="axis" instance=ExtResource("4_0rgty")]
position = Vector2(1, 0)
damage = 32
enemyName = "penguin"

[node name="CollisionShape2D" type="CollisionShape2D" parent="axis/Hurtbox"]
position = Vector2(-1, -2.5)
shape = SubResource("RectangleShape2D_mco5x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fol0l")

[node name="playerPointer" type="RayCast2D" parent="."]

[node name="HealthComponent" parent="." instance=ExtResource("3_7bje5")]
maxHealth = 40
defense = 10

[node name="DeleteMeOutsideOfChunk" parent="." instance=ExtResource("4_tpm0b")]

[node name="part" type="CPUParticles2D" parent="."]
emitting = false
amount = 4
lifetime = 0.25
texture = ExtResource("5_udoxk")
emission_shape = 1
emission_sphere_radius = 4.0
gravity = Vector2(0, 0)
scale_amount_curve = SubResource("Curve_sld51")
color = Color(1.2, 1.2, 1.2, 1)

[node name="diggin" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_pxhdn")
bus = &"SFX"
